--- a/environment.yml
+++ b/environment.yml
@@ -9,13 +9,14 @@ dependencies:
   #- scikit-learn==0.20.1
   #- statsmodels==0.9.0
   - spacy
-  - lxml
-  - html5lib
+  #- lxml
+  #- html5lib
   - bs4
+  #- tqdm
   - spyder-kernels==2.0.1
   - pip
   - pip:
     - PyYAML # yml files
     - arxiv
     - cleantext
-    - ray
+    #- ray
